--- a/src/main/resources/assets/team-list/lang/en_us.json
+++ b/src/main/resources/assets/team-list/lang/en_us.json
@@ -1,11 +1,11 @@
 {
-  "msg.teamlist.team" : "El equipo ",
-  "msg.teamlist.remove_player" : "se le removio al jugador ",
-  "msg.teamlist.no_remove_player" : "no se le pudo remove al jugador ",
-  "msg.teamlist.no_add_player" : "no se le pudo agregar al jugador",
-  "msg.teamlist.add_player" : "se agrego al jugador ",
-  "msg.teamlist.no_remove_icon": "no se pudo remover el icono ",
-  "msg.teamlist.remove_icon" : "se removio el icono ",
+  "msg.teamlist.team" : "Team ",
+  "msg.teamlist.remove_player" : "was removed",
+  "msg.teamlist.no_remove_player" : "couldn't be removed",
+  "msg.teamlist.no_add_player" : "couldn't be added",
+  "msg.teamlist.add_player" : "was added",
+  "msg.teamlist.no_remove_icon": "icon couldn't be removed",
+  "msg.teamlist.remove_icon" : "icon was removed",
   "msg.teamlist.change_icon" : "se le cambio el icono",
   "msg.teamlist.no_change_color" : "no se le pudo cambiar el color ",
   "msg.teamlist.change_color" : "se le cambio el color ",
