--- a/src/main/resources/assets/team-list/lang/en_us.json
+++ b/src/main/resources/assets/team-list/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "msg.teamlist.team" : "Team ",
   "msg.teamlist.remove_player" : " has removed player ",
-  "msg.teamlist.no_remove_player" : " :player couldn't be removed",
+  "msg.teamlist.no_remove_player" : " couldn't remove player ",
   "msg.teamlist.no_add_player" : " :player couldn't be added",
   "msg.teamlist.add_player" : " has added ",
   "msg.teamlist.no_remove_icon": " icon couldn't be removed",
@@ -10,8 +10,9 @@
   "msg.teamlist.no_change_color" : " color couldn't be changed to ",
   "msg.teamlist.change_color" : " color was changed to ",
   "msg.teamlist.no_present" : " doesn't exist",
+  "msg.teamlist.is_present" : " already exists",
   "msg.teamlist.team_remove" : " was deleted",
   "msg.teamlist.team_create" : " was created",
-  "msg.teamlist.no_change_icon" : ""
+  "msg.teamlist.no_change_icon" : " icon couldn't be changed"
 
 }
